unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/Informacion_Representante_Legal_Tercero__c.object-meta.xml
<CustomObject>
    <description>INFO LABORAL DEL REPRESENTANTE LEGAL DEL TERCERO</description>
    <label>Información Representante Legal Tercero</label>
    <nameField>
        <label>Nombre del Representante Legal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Información Representante Legal Tercero</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>