unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Apellido_materno__c.field-meta.xml
<CustomField>
    <fullName>Apellido_materno__c</fullName>
    <label>Apellido Materno</label>
    <length>30</length>
    <type>Text</type>
</CustomField>