unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Apellido_paterno__c.field-meta.xml
<CustomField>
    <fullName>Apellido_paterno__c</fullName>
    <label>Apellido Paterno</label>
    <length>30</length>
    <type>Text</type>
</CustomField>