unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Autoridad_emite_identificacion__c.field-meta.xml
<CustomField>
    <fullName>Autoridad_emite_identificacion__c</fullName>
    <label>Autoridad Emite Identificación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>