unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Calle_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Calle_Empresa__c</fullName>
    <label>Calle Empresa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>