unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Clave_de_Pais__c.field-meta.xml
<CustomField>
    <fullName>Clave_de_Pais__c</fullName>
    <formula>TEXT(Pais__r.CodigoPais__c)</formula>
    <label>Clave de País</label>
    <type>Text</type>
</CustomField>