unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Codigo_Postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Código Postal</label>
    <referenceTo>Codigo_Postal__c</referenceTo>
    <relationshipLabel>Informacion_Representante_Legal_Tercero</relationshipLabel>
    <relationshipName>Informacion_Representante_Legal_Tercero</relationshipName>
    <type>Lookup</type>
</CustomField>