unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Codigo_Postal_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal_Empresa__c</fullName>
    <label>Código Postal Empresa</label>
    <length>20</length>
    <type>Text</type>
</CustomField>