unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Colonia__c.field-meta.xml
<CustomField>
    <fullName>Colonia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colonia</label>
    <referenceTo>Colonia__c</referenceTo>
    <relationshipLabel>Informacion_Representante_Legal_Tercero</relationshipLabel>
    <relationshipName>Informacion_Representante_Legal_Tercero</relationshipName>
    <type>Lookup</type>
</CustomField>