unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Colonia_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Colonia_Empresa__c</fullName>
    <label>Colonia Empresa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>