unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Correo_electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico__c</fullName>
    <label>Correo Electrónico</label>
    <type>Email</type>
</CustomField>