unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/CURP__c.field-meta.xml
<CustomField>
    <fullName>CURP__c</fullName>
    <label>CURP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>