unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Dictaminacion__c.field-meta.xml
<CustomField>
    <fullName>Dictaminacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dictaminación</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Informacion_Representante_Legal_Tercero</relationshipLabel>
    <relationshipName>Informacion_Representante_Legal_Tercero</relationshipName>
    <type>Lookup</type>
</CustomField>