unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Dictaminacion_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Dictaminacion_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dictaminación</label>
    <referenceTo>Dictaminacion__c</referenceTo>
    <relationshipLabel>Información Representante Legal Tercero</relationshipLabel>
    <relationshipName>Informaci_n_Representante_Legal_Tercero</relationshipName>
    <type>Lookup</type>
</CustomField>