unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Domicilio_del_trabajo__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_del_trabajo__c</fullName>
    <label>Domicilio del Trabajo</label>
    <length>150</length>
    <type>Text</type>
</CustomField>