unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Escritura_poliza_o_acta__c.field-meta.xml
<CustomField>
    <fullName>Escritura_poliza_o_acta__c</fullName>
    <label>Escritura, Póliza o Acta</label>
    <length>20</length>
    <type>Text</type>
</CustomField>