unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Informacion_Representante_Legal_Tercero</relationshipLabel>
    <relationshipName>Informacion_Representante_Legal_Tercero</relationshipName>
    <type>Lookup</type>
</CustomField>