unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Estado_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Estado_Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado Empresa</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Informacion_Representante_Legal_Tercero (Estado Empresa)</relationshipLabel>
    <relationshipName>Informacion_Representante_Legal_Tercero1</relationshipName>
    <type>Lookup</type>
</CustomField>