unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Estatus_Proceso_de_Venta_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Proceso_de_Venta_Oportunidad__c</fullName>
    <formula>IF( ISBLANK(Perfil_Tercero_Persona_Fisica__c), 
				Perfil_Tercero_Persona_Moral__r.Estatus_Proceso_de_Venta_Oportunidad__c,
			 Perfil_Tercero_Persona_Fisica__r.Estatus_Proceso_de_Venta_Oportunidad__c)</formula>
    <label>Estatus Proceso de Venta/Dictaminación</label>
    <type>Text</type>
</CustomField>