unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <label>Extensión</label>
    <length>10</length>
    <type>Text</type>
</CustomField>