unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Fecha_de_escritura_del_poder__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_escritura_del_poder__c</fullName>
    <label>Fecha de escritura del poder</label>
    <type>Date</type>
</CustomField>