unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Fecha_de_nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_nacimiento__c</fullName>
    <label>Fecha de nacimiento</label>
    <type>Date</type>
</CustomField>