unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Municipio__c.field-meta.xml
<CustomField>
    <fullName>Municipio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad</label>
    <referenceTo>Municipio__c</referenceTo>
    <relationshipLabel>Informacion_Representante_Legal_Tercero</relationshipLabel>
    <relationshipName>Informacion_Representante_Legal_Tercero</relationshipName>
    <type>Lookup</type>
</CustomField>