unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Municipio_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Municipio_Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Municipio Empresa</label>
    <referenceTo>Municipio__c</referenceTo>
    <relationshipLabel>Informacion_Representante_Legal_Tercero (Municipio Empresa)</relationshipLabel>
    <relationshipName>Informacion_Representante_Legal_Tercero1</relationshipName>
    <type>Lookup</type>
</CustomField>