unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/N_mero_Interior_Empresa__c.field-meta.xml
<CustomField>
    <fullName>N_mero_Interior_Empresa__c</fullName>
    <label>Número Interior Empresa</label>
    <length>20</length>
    <type>Text</type>
</CustomField>