unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/No_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>No_Identificacion__c</fullName>
    <label>No. Identificación</label>
    <length>30</length>
    <type>Text</type>
</CustomField>