unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Nombre_de_la_empresa__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_empresa__c</fullName>
    <label>Nombre de la Empresa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>