unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Nombre_Representante_Legal_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Representante_Legal_Tercero__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Informacion_Representante_Legal_Tercero__c/&quot;&amp; Id &amp; &quot;/view&quot;,
										     Name &amp; &quot; &quot; &amp;   Apellido_paterno__c &amp; &quot; &quot; &amp; Apellido_materno__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Representante Legal Tercero</label>
    <type>Text</type>
</CustomField>