unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Notario_corredor_del_poder__c.field-meta.xml
<CustomField>
    <fullName>Notario_corredor_del_poder__c</fullName>
    <label>Notario / Corredor del Poder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>