unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Numero_exterior__c.field-meta.xml
<CustomField>
    <fullName>Numero_exterior__c</fullName>
    <label>Número Exterior</label>
    <length>10</length>
    <type>Text</type>
</CustomField>