unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Numero_Exterior_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Numero_Exterior_Empresa__c</fullName>
    <label>Número Exterior Empresa</label>
    <length>20</length>
    <type>Text</type>
</CustomField>