unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Numero_interior__c.field-meta.xml
<CustomField>
    <fullName>Numero_interior__c</fullName>
    <label>Número Interior</label>
    <length>10</length>
    <type>Text</type>
</CustomField>