unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Pais_de_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_Nacimiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País de Nacimiento</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Información Representante Legal Tercero (País de Nacimiento)</relationshipLabel>
    <relationshipName>Informaci_n_Representante_Legal_Tercero</relationshipName>
    <type>Lookup</type>
</CustomField>