unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Pais_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Pais_Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País Empresa</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Informacion_Representante_Legal_Tercero (País Empresa)</relationshipLabel>
    <relationshipName>Informacion_Representante_Legal_Tercero1</relationshipName>
    <type>Lookup</type>
</CustomField>