unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Perfil_Tercero_Persona_Fisica__c.field-meta.xml
<CustomField>
    <fullName>Perfil_Tercero_Persona_Fisica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Perfil Tercero Persona Física</label>
    <referenceTo>Perfil_Tercero_Fisico__c</referenceTo>
    <relationshipLabel>Información Representante Legal Tercero</relationshipLabel>
    <relationshipName>Informaci_n_Representante_Legal_Tercero</relationshipName>
    <type>Lookup</type>
</CustomField>