unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Perfil_Tercero_Persona_Moral__c.field-meta.xml
<CustomField>
    <fullName>Perfil_Tercero_Persona_Moral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Perfil Tercero Persona Moral</label>
    <referenceTo>Perfil_Tercero_Moral__c</referenceTo>
    <relationshipLabel>Informacion Representante Legal Tercero</relationshipLabel>
    <relationshipName>Informacion_Representante_Legal_Tercero</relationshipName>
    <type>Lookup</type>
</CustomField>