unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/RFC_empresa__c.field-meta.xml
<CustomField>
    <fullName>RFC_empresa__c</fullName>
    <label>RFC Empresa</label>
    <length>13</length>
    <type>Text</type>
</CustomField>