unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Telefono_Celular__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Celular__c</fullName>
    <label>Teléfono Celular</label>
    <length>20</length>
    <type>Text</type>
</CustomField>