unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Telefono_domicilio__c.field-meta.xml
<CustomField>
    <fullName>Telefono_domicilio__c</fullName>
    <label>Teléfono Domicilio</label>
    <length>20</length>
    <type>Text</type>
</CustomField>