unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Telefono_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Empresa__c</fullName>
    <label>Teléfono Empresa</label>
    <type>Phone</type>
</CustomField>