unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/fields/Tipo_identificacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_identificacion__c</fullName>
    <label>Tipo Identificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credencial para votar</fullName>
            </value>
            <value>
                <fullName>Cédula Profesional</fullName>
            </value>
            <value>
                <fullName>Documentación expedida INM</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>