unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_actividad_profesion_ocupacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_actividad_profesion_ocupacion</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(TEXT(Actividad_Profesion_Ocupacion__c)),
ISBLANK(TEXT(Actividad_Profesion_Ocupacion__c))
)
)</errorConditionFormula>
    <errorDisplayField>Actividad_Profesion_Ocupacion__c</errorDisplayField>
    <errorMessage>Actividad/Profesión/Ocupacion requerido.</errorMessage>
</ValidationRule>