unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_apellido_materno.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_apellido_materno</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(Apellido_materno__c),
ISBLANK(Apellido_materno__c)
)
)</errorConditionFormula>
    <errorDisplayField>Apellido_materno__c</errorDisplayField>
    <errorMessage>Apellido Materno requerido</errorMessage>
</ValidationRule>