unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_apellido_paterno.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_apellido_paterno</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(Apellido_paterno__c),
ISBLANK(Apellido_paterno__c)
)
)</errorConditionFormula>
    <errorDisplayField>Apellido_paterno__c</errorDisplayField>
    <errorMessage>Apellido Paterno requerido</errorMessage>
</ValidationRule>