unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_autoridad_emite_identificacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_autoridad_emite_identificacion</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(Autoridad_emite_identificacion__c),
ISBLANK(Autoridad_emite_identificacion__c)
)
)</errorConditionFormula>
    <errorDisplayField>Autoridad_emite_identificacion__c</errorDisplayField>
    <errorMessage>Campo requerido</errorMessage>
</ValidationRule>