unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_Calle.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_Calle</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(Calle__c),
ISBLANK(Calle__c)
)
)</errorConditionFormula>
    <errorDisplayField>Calle__c</errorDisplayField>
    <errorMessage>Calle requerido</errorMessage>
</ValidationRule>