unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_ciudad.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_ciudad</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(Municipio__c),
ISBLANK(Municipio__c)
)
)</errorConditionFormula>
    <errorDisplayField>Municipio__c</errorDisplayField>
    <errorMessage>Municipio requerido</errorMessage>
</ValidationRule>