unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_codigo_postal.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_codigo_postal</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(Codigo_Postal__c),
ISBLANK(Codigo_Postal__c)
)
)</errorConditionFormula>
    <errorDisplayField>Codigo_Postal__c</errorDisplayField>
    <errorMessage>Código Postal requerido.</errorMessage>
</ValidationRule>