unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_colonia.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_colonia</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(Colonia__c),
ISBLANK(Colonia__c)
)
)</errorConditionFormula>
    <errorDisplayField>Colonia__c</errorDisplayField>
    <errorMessage>Colonia requerido</errorMessage>
</ValidationRule>