unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_correo_electronico.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_correo_electronico</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(Correo_electronico__c),
ISBLANK(Correo_electronico__c)
)
)</errorConditionFormula>
    <errorDisplayField>Correo_electronico__c</errorDisplayField>
    <errorMessage>Correo Electrónico requerido</errorMessage>
</ValidationRule>