unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_CURP.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_CURP</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(CURP__c),
ISBLANK(CURP__c)
)
)</errorConditionFormula>
    <errorDisplayField>CURP__c</errorDisplayField>
    <errorMessage>CURP requerido</errorMessage>
</ValidationRule>