unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_domicilio_del_trabajo.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_domicilio_del_trabajo</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(Calle_Empresa__c),
ISBLANK(Calle_Empresa__c)
)
)</errorConditionFormula>
    <errorDisplayField>Calle_Empresa__c</errorDisplayField>
    <errorMessage>Calle Empresa requerido</errorMessage>
</ValidationRule>