unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_escritura.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_escritura</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(Escritura_poliza_o_acta__c),
ISBLANK(Escritura_poliza_o_acta__c)
)
)</errorConditionFormula>
    <errorDisplayField>Escritura_poliza_o_acta__c</errorDisplayField>
    <errorMessage>Escritura, Póliza o Acta requerido</errorMessage>
</ValidationRule>