unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_estado.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_estado</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(Estado__c),
ISBLANK(Estado__c)
)
)</errorConditionFormula>
    <errorDisplayField>Estado__c</errorDisplayField>
    <errorMessage>Estado requerido</errorMessage>
</ValidationRule>