unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_estado_empresa.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_estado_empresa</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(Estado_Empresa__c),
ISBLANK(Estado_Empresa__c)
)
)</errorConditionFormula>
    <errorDisplayField>Estado_Empresa__c</errorDisplayField>
    <errorMessage>Estado Empresa requerido</errorMessage>
</ValidationRule>