unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_extension.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_extension</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(Extension__c),
ISBLANK(Extension__c)
)
)</errorConditionFormula>
    <errorDisplayField>Extension__c</errorDisplayField>
    <errorMessage>Extensión requerido</errorMessage>
</ValidationRule>