unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_fecha_escritura_de_poder.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_fecha_escritura_de_poder</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(Fecha_de_escritura_del_poder__c),
ISBLANK(Fecha_de_escritura_del_poder__c)
)
)</errorConditionFormula>
    <errorDisplayField>Fecha_de_escritura_del_poder__c</errorDisplayField>
    <errorMessage>Fecha de escritura del poder requerido</errorMessage>
</ValidationRule>