unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_municipio_empresa.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_municipio_empresa</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(Municipio_Empresa__c),
ISBLANK(Municipio_Empresa__c)
)
)</errorConditionFormula>
    <errorDisplayField>Municipio_Empresa__c</errorDisplayField>
    <errorMessage>Municipio Empresa requerido</errorMessage>
</ValidationRule>