unpackaged/main/default/objects/Informacion_Representante_Legal_Tercero__c/validationRules/Tercero_no_identificacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Tercero_no_identificacion</fullName>
    <active>true</active>
    <description>Si existe un tercero que aporta recursos total o parcial = Si se deben llenar el campo.</description>
    <errorConditionFormula>AND
(
Existe_un_Tercero_que_aporta_Recursos__c == &quot;SI&quot;,
OR(
ISNULL(No_Identificacion__c),
ISBLANK(No_Identificacion__c)
)
)</errorConditionFormula>
    <errorDisplayField>No_Identificacion__c</errorDisplayField>
    <errorMessage>No. Identificación requerido</errorMessage>
</ValidationRule>